--- a/Mobile_App/ui-prototypes/REACT_NATIVE/Practice/ios/Practice/Info.plist
+++ b/Mobile_App/ui-prototypes/REACT_NATIVE/Practice/ios/Practice/Info.plist
@@ -57,6 +57,7 @@
 	<array>
 		<string>GoogleSans-Regular.ttf</string>
 		<string>Quicksand-Regular.ttf</string>
+		<string>Product Sans Regular.ttf</string>
 	</array>
 </dict>
 </plist>
